# OpenGL-3D-Nesne-Kontrol-

./: README.md
proje/: CMakeLists.txt
proje/include/: functiontypes.hpp  glwindow.hpp  indexbuffer.hpp  shaderprogram.hpp  shapecreator.hpp  statemanager.hpp  texturemanager.hpp  vertexarrayobject.hpp  vertexbuffer.hpp  vertextypes.hpp
proje/shaders/: fragment.glsl  vertex.glsl
proje/src/: glwindow.cpp  indexbuffer.cpp  main.cpp  shaderprogram.cpp  shapecreator.cpp  statemanager.cpp  texturemanager.cpp  vertexarrayobject.cpp  vertexbuffer.cpp
